[package]
name = "Fulgur"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
keywords = ["rust", "text", "editor", "fulgur", "sync", "desktop", "multiplatform"]
categories = ["text", "editor", "desktop", "multiplatform"]
homepage = "https://fulgur.app"

[features]
default = []
gpui-test-support = ["gpui/test-support"]

[lints.clippy]
# Pedantic mode is always on. Rules below are allowed because they are not yet addressed.
# To burn down the list: remove one allow entry, fix all its violations, repeat.
pedantic = { level = "deny", priority = -1 }

# --- Burn-down list: allowed until fixed one by one ---
borrow_as_ptr = "allow" # Windows only
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
duration_suboptimal_units = "allow"
explicit_deref_methods = "allow"
explicit_iter_loop = "allow"
implicit_clone = "allow"
items_after_statements = "allow"
manual_let_else = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
ptr_as_ptr = "allow"
redundant_closure_for_method_calls = "allow"
semicolon_if_nothing_returned = "allow"
single_char_pattern = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
unchecked_time_subtraction = "allow"
unreadable_literal = "allow"
unsafe_derive_deserialize = "allow"
unused_async = "allow"
unused_self = "allow"
used_underscore_binding = "allow"

[lib]
name = "fulgur"
path = "src/lib.rs"

[dependencies]
# Types
fulgur-common = { git = "https://github.com/fulgur-app/Fulgur-common.git", tag = "v0.4.0"}
lsp-types = "0.97"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Cryptography & security
base64 = "0.22.1"
age = "0.11.2"
zeroize = "1.8.2"
sha2 = "0.10.9"
sha1 = "0.10.6"
hmac = "0.12.1"
ssh-key = { version = "0.6.7", features = ["std"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "linux-native"] }

# Networking
ureq = { version = "3.2.0", features = ["json"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# Encoding
chardetng = "0.1.17"
encoding_rs = "0.8.35"
urlencoding = "2.1.3"
url = "2.5.8"

# Logging
log = "0.4.29"

# Time
time = { version = "0.3.47", features = ["serde", "macros", "formatting", "parsing"] }

# Error handling
anyhow = "1.0.102"

# GUI
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["runtime_shaders", "font-kit", "wayland", "x11"] }
gpui-macros = "0.2.2"
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-languages"] }

# Filesystem
notify = "8.2.0"
open = "5.3.3"
flate2 = "1.1.9"

# Security - forcing minimum versions for transitive dependencies
# Fix RUSTSEC-2026-0007: Integer overflow in BytesMut::reserve
bytes = "1.11.1"
# Fix RUSTSEC-2026-0098/0099: Name constraint bypass in rustls-webpki
rustls-webpki = "0.103.12"

# Tree-sitter languages
arborium-ada = "2.15.0"
arborium-asm = "2.16.0"
arborium-c = "2.15.0"
arborium-clojure = "2.15.0"
arborium-d = "2.15.0"
arborium-dart = "2.15.0"
arborium-erlang = "2.15.0"
arborium-groovy = "2.15.0"
arborium-jinja2 = "2.16.0"
arborium-julia = "2.16.0"
arborium-matlab = "2.16.0"
arborium-ini = "2.15.0"
arborium-objc = "2.14.0"
arborium-prolog = "2.15.0"
arborium-scss = "2.14.0"
arborium-tsx= "2.14.0"
arborium-vue = "2.14.0"
arborium-dockerfile = "2.15.0"
tree-sitter-haskell = "0.23.1"
tree-sitter-ocaml = "0.24.2"
tree-sitter-pascal = "0.10.2"
tree-sitter-perl-next = "0.1.0"
tree-sitter-powershell = "0.26.3"
tree-sitter-fortran = "0.5.1"
tree-sitter-fsharp = "0.1.0"
tree-sitter-r = "1.2.0"

# Others
rust-embed = "8.11.0"
regex = "1.12.3"
ropey = "=2.0.0-beta.1"
semver = "1.0.27"
parking_lot = "0.12.5"
color-lsp = "0.2.0"
flexi_logger = "0.31.8"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
] }

[dev-dependencies]
tempfile = "3.26.0"

[build-dependencies]
embed-resource = "3.0.6"


# Builds the dependencies with optimisations even during debug builds, commented by default
# [profile.dev.package."*"]
# opt-level = 3

# ============================================================================
# cargo-udeps ignore list
# ============================================================================

[package.metadata.cargo-udeps.ignore]
build = ["embed-resource"]  # Windows-only build dependency

# ============================================================================
# cargo-packager configuration
# ============================================================================

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "Fulgur"
resources = ["LICENCE", "THIRD-PARTY-LICENSES"]
identifier = "app.fulgur.fulgur"
authors = ["PRRPCHT"]
publisher = "PRRPCHT"
description = "Lightning-fast, fully themable, multiplatform text editor with secure file synchronization"
long-description = """
Fulgur is a GPU-accelerated, open-source text editor built with Rust and GPUI.
It supports 50+ languages, first-class Markdown editing, and runs on Windows, macOS, and Linux.
Fulgur works offline by default and can securely sync text files between devices with end-to-end encryption via Fulgurant.
"""
homepage = "https://fulgur.app"
copyright = "Copyright (c) 2025-2026 PRRPCHT"
category = "DeveloperTool"
icons = ["assets/icon.icns", "assets/icon.ico", "assets/icon_512.png", "assets/icon_256.png", "assets/icon_128.png", "assets/icon_64.png", "assets/icon_48.png", "assets/icon_32.png", "assets/icon_16.png"]

[package.metadata.packager.nsis]
template = "resources/windows/installer.nsi"
appdata-paths = ["$APPDATA/Fulgur"]
sidebar_image =  "assets/nsis-sidebar.bmp"


# Plain Text
[[package.metadata.packager.file-associations]]
extensions = ["txt", "text"]
name = "Plain Text"
description = "Plain text document"
role = "editor"
mimeType = "text/plain"

# Markdown
[[package.metadata.packager.file-associations]]
extensions = ["md", "markdown", "mdown", "mkd", "mdwn"]
name = "Markdown Document"
description = "Markdown formatted text"
role = "editor"
mimeType = "text/markdown"

# reStructuredText
[[package.metadata.packager.file-associations]]
extensions = ["rst"]
name = "reStructuredText Document"
description = "reStructuredText document"
role = "editor"
mimeType = "text/x-rst"

# JSON
[[package.metadata.packager.file-associations]]
extensions = ["json", "jsonc"]
name = "JSON Document"
description = "JSON data file"
role = "editor"
mimeType = "application/json"

# XML
[[package.metadata.packager.file-associations]]
extensions = ["xml"]
name = "XML Document"
description = "XML document"
role = "editor"
mimeType = "application/xml"

# YAML
[[package.metadata.packager.file-associations]]
extensions = ["yaml", "yml"]
name = "YAML Document"
description = "YAML configuration file"
role = "editor"
mimeType = "application/x-yaml"

# TOML
[[package.metadata.packager.file-associations]]
extensions = ["toml"]
name = "TOML Configuration"
description = "TOML configuration file"
role = "editor"
mimeType = "application/toml"

# INI/Config
[[package.metadata.packager.file-associations]]
extensions = ["ini", "cfg", "conf", "config"]
name = "Configuration File"
description = "Configuration file"
role = "editor"
mimeType = "text/plain"

# Environment Files
[[package.metadata.packager.file-associations]]
extensions = ["env"]
name = "Environment File"
description = "Environment variables file"
role = "editor"
mimeType = "text/plain"

# CSV
[[package.metadata.packager.file-associations]]
extensions = ["csv"]
name = "CSV File"
description = "Comma-separated values file"
role = "editor"
mimeType = "text/csv"

# TSV
[[package.metadata.packager.file-associations]]
extensions = ["tsv"]
name = "TSV File"
description = "Tab-separated values file"
role = "editor"
mimeType = "text/tab-separated-values"

# ============================================================================
# PROGRAMMING LANGUAGES
# ============================================================================

# Rust
[[package.metadata.packager.file-associations]]
extensions = ["rs"]
name = "Rust Source"
description = "Rust source code"
role = "editor"
mimeType = "text/x-rust"

# JavaScript
[[package.metadata.packager.file-associations]]
extensions = ["js", "mjs", "cjs"]
name = "JavaScript Source"
description = "JavaScript source code"
role = "editor"
mimeType = "text/javascript"

# TypeScript
[[package.metadata.packager.file-associations]]
extensions = ["ts", "tsx"]
name = "TypeScript Source"
description = "TypeScript source code"
role = "editor"
mimeType = "text/typescript"

# JSX
[[package.metadata.packager.file-associations]]
extensions = ["jsx"]
name = "JSX Source"
description = "React JSX source code"
role = "editor"
mimeType = "text/jsx"

# Python
[[package.metadata.packager.file-associations]]
extensions = ["py", "pyw", "pyx", "pyi"]
name = "Python Source"
description = "Python source code"
role = "editor"
mimeType = "text/x-python"

# Java
[[package.metadata.packager.file-associations]]
extensions = ["java"]
name = "Java Source"
description = "Java source code"
role = "editor"
mimeType = "text/x-java"

# Jinja2
[[package.metadata.packager.file-associations]]
extensions = ["jinja", "jinja2", "j2"]
name = "Jinja2 Template"
description = "Jinja2 template file"
role = "editor"
mimeType = "text/x-jinja2"

# Julia
[[package.metadata.packager.file-associations]]
extensions = ["jl"]
name = "Julia Source"
description = "Julia source code"
role = "editor"
mimeType = "text/x-julia"

# Kotlin
[[package.metadata.packager.file-associations]]
extensions = ["kt", "kts"]
name = "Kotlin Source"
description = "Kotlin source code"
role = "editor"
mimeType = "text/x-kotlin"

# Scala
[[package.metadata.packager.file-associations]]
extensions = ["scala", "sc"]
name = "Scala Source"
description = "Scala source code"
role = "editor"
mimeType = "text/x-scala"

# C
[[package.metadata.packager.file-associations]]
extensions = ["c", "h"]
name = "C Source"
description = "C source code"
role = "editor"
mimeType = "text/x-c"

# C++
[[package.metadata.packager.file-associations]]
extensions = ["cpp", "cc", "cxx", "hpp", "hh", "hxx", "c++", "h++"]
name = "C++ Source"
description = "C++ source code"
role = "editor"
mimeType = "text/x-c++"

# C#
[[package.metadata.packager.file-associations]]
extensions = ["cs", "csx"]
name = "C# Source"
description = "C# source code"
role = "editor"
mimeType = "text/x-csharp"

# Erlang
[[package.metadata.packager.file-associations]]
extensions = ["erl", "hrl", "escript"]
name = "Erlang Source"
description = "Erlang source code"
role = "editor"
mimeType = "text/x-erlang"

# Go
[[package.metadata.packager.file-associations]]
extensions = ["go"]
name = "Go Source"
description = "Go source code"
role = "editor"
mimeType = "text/x-go"

# Ruby
[[package.metadata.packager.file-associations]]
extensions = ["rb", "ruby", "rake"]
name = "Ruby Source"
description = "Ruby source code"
role = "editor"
mimeType = "text/x-ruby"

# PHP
[[package.metadata.packager.file-associations]]
extensions = ["php", "phtml"]
name = "PHP Source"
description = "PHP source code"
role = "editor"
mimeType = "text/x-php"

# Swift
[[package.metadata.packager.file-associations]]
extensions = ["swift"]
name = "Swift Source"
description = "Swift source code"
role = "editor"
mimeType = "text/x-swift"

# Objective-C
[[package.metadata.packager.file-associations]]
extensions = ["m", "mm"]
name = "Objective-C Source"
description = "Objective-C source code"
role = "editor"
mimeType = "text/x-objc"

# D
[[package.metadata.packager.file-associations]]
extensions = ["d", "di"]
name = "D Source"
description = "D programming language source code"
role = "editor"
mimeType = "text/x-dsrc"

# Dart
[[package.metadata.packager.file-associations]]
extensions = ["dart"]
name = "Dart Source"
description = "Dart source code"
role = "editor"
mimeType = "text/x-dart"

# Lua
[[package.metadata.packager.file-associations]]
extensions = ["lua"]
name = "Lua Source"
description = "Lua source code"
role = "editor"
mimeType = "text/x-lua"

# Pascal / Delphi / FreePascal
[[package.metadata.packager.file-associations]]
extensions = ["pas", "pp", "dpr", "dpk", "lpr"]
name = "Pascal Source"
description = "Pascal / Delphi / FreePascal source code"
role = "editor"
mimeType = "text/x-pascal"

# Perl
[[package.metadata.packager.file-associations]]
extensions = ["pl", "pm"]
name = "Perl Source"
description = "Perl source code"
role = "editor"
mimeType = "text/x-perl"

# Prolog
[[package.metadata.packager.file-associations]]
extensions = ["pro", "prolog"]
name = "Prolog Source"
description = "Prolog source code"
role = "editor"
mimeType = "text/x-prolog"

# R
[[package.metadata.packager.file-associations]]
extensions = ["r", "R"]
name = "R Source"
description = "R source code"
role = "editor"
mimeType = "text/x-r"

# ============================================================================
# WEB TECHNOLOGIES
# ============================================================================

# HTML
[[package.metadata.packager.file-associations]]
extensions = ["html", "htm", "xhtml"]
name = "HTML Document"
description = "HTML web page"
role = "editor"
mimeType = "text/html"

# CSS
[[package.metadata.packager.file-associations]]
extensions = ["css"]
name = "CSS Stylesheet"
description = "Cascading Style Sheet"
role = "editor"
mimeType = "text/css"

# SCSS
[[package.metadata.packager.file-associations]]
extensions = ["scss"]
name = "SCSS Stylesheet"
description = "Sassy CSS stylesheet"
role = "editor"
mimeType = "text/x-scss"

# Sass
[[package.metadata.packager.file-associations]]
extensions = ["sass"]
name = "Sass Stylesheet"
description = "Syntactically Awesome Stylesheet"
role = "editor"
mimeType = "text/x-sass"

# Less
[[package.metadata.packager.file-associations]]
extensions = ["less"]
name = "Less Stylesheet"
description = "Less stylesheet"
role = "editor"
mimeType = "text/x-less"

# Vue
[[package.metadata.packager.file-associations]]
extensions = ["vue"]
name = "Vue Component"
description = "Vue.js component"
role = "editor"
mimeType = "text/x-vue"

# Svelte
[[package.metadata.packager.file-associations]]
extensions = ["svelte"]
name = "Svelte Component"
description = "Svelte component"
role = "editor"
mimeType = "text/x-svelte"

# SVG
[[package.metadata.packager.file-associations]]
extensions = ["svg"]
name = "SVG Image"
description = "Scalable Vector Graphics"
role = "editor"
mimeType = "image/svg+xml"

# ============================================================================
# SHELL SCRIPTS
# ============================================================================

# Bash
[[package.metadata.packager.file-associations]]
extensions = ["sh", "bash"]
name = "Shell Script"
description = "Bash shell script"
role = "editor"
mimeType = "text/x-shellscript"

# Zsh
[[package.metadata.packager.file-associations]]
extensions = ["zsh"]
name = "Zsh Script"
description = "Zsh shell script"
role = "editor"
mimeType = "text/x-zsh"

# Fish
[[package.metadata.packager.file-associations]]
extensions = ["fish"]
name = "Fish Script"
description = "Fish shell script"
role = "editor"
mimeType = "text/x-fish"

# PowerShell
[[package.metadata.packager.file-associations]]
extensions = ["ps1", "psm1"]
name = "PowerShell Script"
description = "PowerShell script"
role = "editor"
mimeType = "text/x-powershell"

# Batch
[[package.metadata.packager.file-associations]]
extensions = ["bat", "cmd"]
name = "Batch File"
description = "Windows batch file"
role = "editor"
mimeType = "text/x-msdos-batch"

# ============================================================================
# DATABASE
# ============================================================================

# SQL
[[package.metadata.packager.file-associations]]
extensions = ["sql"]
name = "SQL Script"
description = "SQL database script"
role = "editor"
mimeType = "text/x-sql"

# ============================================================================
# DOCUMENTATION
# ============================================================================

# LaTeX
[[package.metadata.packager.file-associations]]
extensions = ["tex", "latex"]
name = "LaTeX Document"
description = "LaTeX document"
role = "editor"
mimeType = "text/x-tex"

# BibTeX
[[package.metadata.packager.file-associations]]
extensions = ["bib"]
name = "BibTeX Bibliography"
description = "BibTeX bibliography"
role = "editor"
mimeType = "text/x-bibtex"

# Org Mode
[[package.metadata.packager.file-associations]]
extensions = ["org"]
name = "Org Mode Document"
description = "Emacs Org mode document"
role = "editor"
mimeType = "text/org"

# AsciiDoc
[[package.metadata.packager.file-associations]]
extensions = ["adoc", "asciidoc"]
name = "AsciiDoc Document"
description = "AsciiDoc document"
role = "editor"
mimeType = "text/asciidoc"

# ============================================================================
# VERSION CONTROL & BUILD
# ============================================================================

# Git Config
[[package.metadata.packager.file-associations]]
extensions = ["gitignore", "gitattributes", "gitmodules"]
name = "Git Configuration"
description = "Git configuration file"
role = "editor"
mimeType = "text/plain"

# Dockerfile
[[package.metadata.packager.file-associations]]
extensions = ["dockerfile"]
name = "Dockerfile"
description = "Docker container definition"
role = "editor"
mimeType = "text/x-dockerfile"

# Makefile
[[package.metadata.packager.file-associations]]
extensions = ["makefile"]
name = "Makefile"
description = "Make build file"
role = "editor"
mimeType = "text/x-makefile"

# CMake
[[package.metadata.packager.file-associations]]
extensions = ["cmake"]
name = "CMake File"
description = "CMake build configuration"
role = "editor"
mimeType = "text/x-cmake"

# Gradle
[[package.metadata.packager.file-associations]]
extensions = ["gradle"]
name = "Gradle Build File"
description = "Gradle build configuration"
role = "editor"
mimeType = "text/x-gradle"

# ============================================================================
# OTHER
# ============================================================================

# Log Files
[[package.metadata.packager.file-associations]]
extensions = ["log"]
name = "Log File"
description = "Log file"
role = "editor"
mimeType = "text/x-log"

# Diff/Patch
[[package.metadata.packager.file-associations]]
extensions = ["diff", "patch"]
name = "Diff/Patch File"
description = "Unified diff or patch file"
role = "editor"
mimeType = "text/x-diff"

# License
[[package.metadata.packager.file-associations]]
extensions = ["license"]
name = "License File"
description = "Software license"
role = "editor"
mimeType = "text/plain"

# README
[[package.metadata.packager.file-associations]]
extensions = ["readme"]
name = "README File"
description = "README documentation"
role = "editor"
mimeType = "text/plain"

# Fortran
[[package.metadata.packager.file-associations]]
extensions = ["f", "f77", "f90", "f95", "f03", "f08", "for", "ftn", "pf"]
name = "Fortran Source File"
description = "Fortran source code"
role = "editor"
mimeType = "text/x-fortran"

# F#
[[package.metadata.packager.file-associations]]
extensions = ["fs", "fsi", "fsx", "fsscript"]
name = "F# Source File"
description = "F# source code"
role = "editor"
mimeType = "text/x-fsharp"

# Assembly
[[package.metadata.packager.file-associations]]
extensions = ["asm", "nasm", "masm"]
name = "Assembly Source File"
description = "Assembly language source code"
role = "editor"
mimeType = "text/x-asm"

[package.metadata.packager.macos]
minimum-system-version = "10.15"
entitlements = "entitlements.plist"

[package.metadata.packager.linux]
generate-desktop-entry = true

[package.metadata.packager.deb]
desktop-template = "resources/linux/Fulgur.desktop.hbs"

[package.metadata.packager.deb.files]
"resources/linux/app.fulgur.fulgur.metainfo.xml" = "usr/share/metainfo/app.fulgur.fulgur.metainfo.xml"
"assets/icon_16.png" = "usr/share/icons/hicolor/16x16/apps/app.fulgur.fulgur.png"
"assets/icon_32.png" = "usr/share/icons/hicolor/32x32/apps/app.fulgur.fulgur.png"
"assets/icon_48.png" = "usr/share/icons/hicolor/48x48/apps/app.fulgur.fulgur.png"
"assets/icon_64.png" = "usr/share/icons/hicolor/64x64/apps/app.fulgur.fulgur.png"
"assets/icon_128.png" = "usr/share/icons/hicolor/128x128/apps/app.fulgur.fulgur.png"
"assets/icon_256.png" = "usr/share/icons/hicolor/256x256/apps/app.fulgur.fulgur.png"
"assets/icon_512.png" = "usr/share/icons/hicolor/512x512/apps/app.fulgur.fulgur.png"
"assets/icon.png" = "usr/share/pixmaps/app.fulgur.fulgur.png"

[package.metadata.packager.appimage.files]
"resources/linux/app.fulgur.fulgur.metainfo.xml" = "usr/share/metainfo/app.fulgur.fulgur.metainfo.xml"
"assets/icon_16.png" = "usr/share/icons/hicolor/16x16/apps/Fulgur.png"
"assets/icon_32.png" = "usr/share/icons/hicolor/32x32/apps/Fulgur.png"
"assets/icon_48.png" = "usr/share/icons/hicolor/48x48/apps/Fulgur.png"
"assets/icon_64.png" = "usr/share/icons/hicolor/64x64/apps/Fulgur.png"
"assets/icon_128.png" = "usr/share/icons/hicolor/128x128/apps/Fulgur.png"
"assets/icon_256.png" = "usr/share/icons/hicolor/256x256/apps/Fulgur.png"
"assets/icon_512.png" = "usr/share/icons/hicolor/512x512/apps/Fulgur.png"
"assets/icon.png" = "usr/share/pixmaps/Fulgur.png"
